--- a/index.html
+++ b/index.html
@@ -29,23 +29,262 @@
 
     <!-- main section start -->
     <main>
-        <section>
+        <section class="sec_one">
             <div class="first-section">
                 <div class="first-section-text">
                     <h1>Start your journey as influencer</h1>
                     <p>Quick Results - Search for Relevant Info & Results. Get Results from Multiple Engines. Search for
                         Marketing Agency Uk and Discover Millions of Results at BlendedSearch. Discover us now!</p>
-                    <a href="">Preebook Now<i class="fas fa-long-arrow-alt-right"></i></a>
+                    <a class="button" href="">Preebook Now<i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
                 <div class="first-section-img">
                     <img src="images/main-camera.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- main section start -->
+        <section class="sec_two">
+            <h1 class="section-text"><b>Popular Collection</b></h1><br>
+            <div class="second-section">
+                <div class="box card_1">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img class="card-img" src="./images/tripod.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_2">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/mic.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_3">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/airpod.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_4">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/drone.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_5">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/lights.png" alt="">
+
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_6">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/setup.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_7">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/camera.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_8">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/single-light.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                    </div>
+                </div>
+                <div class="box card_9">
+                    <div class="second-section-icon">
+                        <div class="card-detil">
+                            <img src="./images/action.png" alt="">
+                            <div class="text-detail">
+                                <h2>Flex Tripod</h2>
+                                <p class="price"><b>$50.49</b></p>
+                                <div class="star-view">
+                                    <div class="star-icon">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+
+                                    </div>
+                                    <p class="views">4.99</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-bottom"><b>Wordwise wisdome <br>
+                                avilable <br>
+                                Buyers Protection possible!
+                        </p></b>
+                        <a class="bottom-btn" href="">See More<i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
-
-
 
 
 
