--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </section>
-        <!-- main section start -->
+        <!-- Second section start -->
         <section class="sec_two">
             <h1 class="section-text"><b>Popular Collection</b></h1><br>
             <div class="second-section">
@@ -279,10 +279,25 @@
                                 avilable <br>
                                 Buyers Protection possible!
                         </p></b>
-                        <a class="bottom-btn" href="">See More<i class="fas fa-long-arrow-alt-right"></i></a>
+                        <div class="bottom">
+                            <a class="bottom-btn" href="">See More<i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <section>
+            <footer>
+                <h1>Influencer Product</h1>
+                <p>Copyright <i class="far fa-copyright"></i> 2022 influencer products <br>
+                    All rights reserved</p>
+                <div class="footer-icons">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fas fa-globe"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </footer>
         </section>
     </main>
 
